added more comments

--- a/choropleth-generation/cube-to-chart.ipynb
+++ b/choropleth-generation/cube-to-chart.ipynb
@@ -1,25 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Geography and household waste generation\n",
+    "\n",
+    "This experiment generates choropleths which help visualise the variations in the amounts of household-generated waste across geographic areas in Scotland."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "java.net.URLEncoder"
+       "org.apache.commons.math3.stat.regression.SimpleRegression"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "; Generate visualisations of the variations of waste values across geographic areas in Scotland.\n",
-    "\n",
-    "\n",
     "; Add code libraries\n",
     "\n",
     "(require '[clojupyter.misc.helper :as helper])\n",
@@ -27,6 +33,7 @@
     "(helper/add-dependencies '[org.clojure/data.csv \"1.0.0\"])\n",
     "(helper/add-dependencies '[metasoarous/oz \"1.6.0-alpha24\"])\n",
     "(helper/add-dependencies '[clj-http/clj-http \"3.10.1\"])\n",
+    "(helper/add-dependencies '[org.apache.commons/commons-math3 \"3.6.1\"])\n",
     "\n",
     "(require '[clojure.string :as str]\n",
     "         '[clojure.pprint :as pp]\n",
@@ -35,21 +42,23 @@
     "         '[clj-http.client :as http]\n",
     "         '[oz.notebook.clojupyter :as oz]\n",
     "         '[oz.core :as ozcore])\n",
-    "(import 'java.net.URLEncoder)"
+    "         \n",
+    "(import 'java.net.URLEncoder\n",
+    "        'org.apache.commons.math3.stat.regression.SimpleRegression)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#'user/exec-query"
+       "#'user/trend"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,21 +83,43 @@
     "                    :debug false})\n",
     "        :body\n",
     "        csv/read-csv\n",
-    "        to-maps))"
+    "        to-maps))\n",
+    "        \n",
+    "; Compute 'the trend of y'.\n",
+    "; (Returns the gradient of a linear approximation to the curve decribed by xy-pairs.)\n",
+    "(defn trend [xy-pairs]\n",
+    "    (let [regression (SimpleRegression. true)]\n",
+    "        (doseq [[x y] xy-pairs]\n",
+    "            (.addData regression x y))\n",
+    "        (.getSlope regression)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use a SPARQL query against statistics.gov.scot's data cubes, to find the waste tonnage genearated per council citizen per year."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "264 rows\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "#'user/tonnage-generated-per-council-citizen-per-year"
+       "nil"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -155,11 +186,11 @@
       "\n",
       "|          :council | :councilCode | :year |         :tonnagePerCitizen |\n",
       "|-------------------+--------------+-------+----------------------------|\n",
-      "|      West Lothian |    S12000040 |  2012 | 0.412090222146468950627805 |\n",
-      "|             Moray |    S12000020 |  2015 | 0.524719924615223536802429 |\n",
-      "|           Falkirk |    S12000014 |  2013 | 0.457813693051667090862815 |\n",
-      "|  Scottish Borders |    S12000026 |  2017 | 0.464884367936011128499391 |\n",
-      "| City of Edinburgh |    S12000036 |  2016 | 0.381199597768006782735572 |\n"
+      "| East Renfrewshire |    S12000011 |  2017 | 0.501941747572815533980583 |\n",
+      "|    Orkney Islands |    S12000023 |  2011 | 0.478758169934640522875817 |\n",
+      "|       Dundee City |    S12000042 |  2011 | 0.464456521739130434782609 |\n",
+      "|             Angus |    S12000041 |  2013 | 0.466574941955456187118411 |\n",
+      "|     Aberdeenshire |    S12000034 |  2012 | 0.527109093754891219283143 |\n"
      ]
     },
     {
@@ -168,7 +199,7 @@
        "nil"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,8 +212,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each council area, derive the 3 values:\n",
+    "* `recent` - 2018's tonnage of waste generated per council citizen.\n",
+    "* `average` - 2011-2018's average tonnage of waste generated per council citizen.\n",
+    "<br>(Calculated as the _mean_.)\n",
+    "* `trend` - 2011-2018's trend in tonnage of waste generated per council citizen.\n",
+    "<br>(Calculated as the gradient of a linear approximation to the tonage over the years.)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -198,50 +241,43 @@
        "nil"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "; Derive 3 subsets of data:\n",
-    ";   * 'recent'  - 2018's tonnage of waste generated per council citizen\n",
-    ";   * 'average' - 2011-2018's average tonnage of waste generated per council citizen\n",
-    ";   * 'trend'   - 2011-2018's difference in tonnage of waste generated per council citizen\n",
+    "; For each council area, derive the 3 values: 'recent', 'average' and 'trend'.\n",
     "\n",
-    "(def tonnage-generated-per-council-citizen-based\n",
+    "(def stats-on-tonnage-generated-per-council-citizen\n",
     "    (let [base-data tonnage-generated-per-council-citizen-per-year]\n",
     "        (for [council (->> base-data (map :council) distinct)]\n",
     "            {:council council\n",
     "             :recent (->> base-data \n",
     "                         (filter #(and (= council (:council %)) (= \"2018\" (:year %)))) \n",
     "                         first \n",
-    "                         :tonnagePerCitizen)\n",
+    "                         :tonnagePerCitizen\n",
+    "                         bigdec\n",
+    "                         .doubleValue\n",
+    "                         (format \"%.6f\"))\n",
     "             :average (->> base-data \n",
     "                         (filter #(= council (:council %))) \n",
-    "                         (map :tonnagePerCitizen)\n",
-    "                         (map bigdec)\n",
+    "                         (map #(-> % :tonnagePerCitizen bigdec .doubleValue))\n",
     "                         (apply +) \n",
-    "                         (#(/ % 8)))\n",
-    "              :trend ;; TODO: maybe compute the Ordinary Least Squares coefficient\n",
-    "                     ;; but compute a simple subtraction for now\n",
-    "                     (- (->> base-data \n",
-    "                             (filter #(and (= council (:council %)) (= \"2018\" (:year %)))) \n",
-    "                             first \n",
-    "                             :tonnagePerCitizen\n",
-    "                             bigdec)\n",
-    "                        (->> base-data \n",
-    "                             (filter #(and (= council (:council %)) (= \"2011\" (:year %)))) \n",
-    "                             first \n",
-    "                             :tonnagePerCitizen\n",
-    "                             bigdec))})))\n",
+    "                         (#(/ % 8))\n",
+    "                         (format \"%.6f\"))\n",
+    "              :trend (->> base-data \n",
+    "                         (filter #(= council (:council %))) \n",
+    "                         (map #(vector (-> % :year bigdec .doubleValue) (-> % :tonnagePerCitizen bigdec .doubleValue)))\n",
+    "                         trend\n",
+    "                         (format \"%.6f\"))})))\n",
     "            \n",
-    "(println (count tonnage-generated-per-council-citizen-based) \"rows\")"
+    "(println (count stats-on-tonnage-generated-per-council-citizen) \"rows\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -251,13 +287,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|          :council |                    :recent |                      :average |                      :trend |\n",
-      "|-------------------+----------------------------+-------------------------------+-----------------------------|\n",
-      "| East Renfrewshire | 0.461563517915309446254072 | 0.492373234778840765744668375 | -0.036079913424851328990945 |\n",
-      "|    Orkney Islands | 0.460612888688598467778279 | 0.470190287581728018161481625 | -0.018145281246042055097538 |\n",
-      "|      East Lothian | 0.473901124870025522261083 |  0.49911582824953486857742025 | -0.058154519645586967730911 |\n",
-      "| North Lanarkshire | 0.429698982891410429772473 | 0.457329635901437797113742625 | -0.044794680498379929104703 |\n",
-      "|       Dundee City |  0.40855798319327731092437 |  0.44217890463213453189780425 | -0.055898538545853123858239 |\n"
+      "|            :council |  :recent | :average |    :trend |\n",
+      "|---------------------+----------+----------+-----------|\n",
+      "|    Scottish Borders | 0.455374 | 0.454524 | -0.001324 |\n",
+      "|   South Lanarkshire | 0.471663 | 0.482378 | -0.003732 |\n",
+      "|       Aberdeen City | 0.375901 | 0.411855 | -0.007918 |\n",
+      "|   Perth and Kinross | 0.474684 | 0.507261 | -0.005785 |\n",
+      "| East Dunbartonshire | 0.476719 | 0.511911 | -0.005944 |\n"
      ]
     },
     {
@@ -266,7 +302,7 @@
        "nil"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,19 +311,19 @@
     "; Print a sample\n",
     "\n",
     "(def ks [:council :recent :average :trend])\n",
-    "(pp/print-table ks (repeatedly 5 #(rand-nth tonnage-generated-per-council-citizen-based)))"
+    "(pp/print-table ks (repeatedly 5 #(rand-nth stats-on-tonnage-generated-per-council-citizen)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wrote to /Users/amc/workspace/data-commons-scotland/dcs-shorts/choropleth-generation/tonnage-generated-per-council-citizen-based.csv\n"
+      "Wrote to /Users/amc/workspace/data-commons-scotland/dcs-shorts/choropleth-generation/stats-on-tonnage-generated-per-council-citizen.csv\n"
      ]
     },
     {
@@ -296,22 +332,22 @@
        "nil"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "; Store tonnage-generated-per-council-citizen-based in a CSV file for subsequent use by the Vega chart\n",
+    "; Store stats-on-tonnage-generated-per-council-citizen in a CSV file for subsequent use by the Vega chart\n",
     "\n",
-    "(def filename \"tonnage-generated-per-council-citizen-based.csv\")\n",
+    "(def filename \"stats-on-tonnage-generated-per-council-citizen.csv\")\n",
     "\n",
     "(let [file (io/file filename)\n",
-    "      header-row (->> tonnage-generated-per-council-citizen-based\n",
+    "      header-row (->> stats-on-tonnage-generated-per-council-citizen\n",
     "                      first\n",
     "                      keys\n",
     "                      (map name))\n",
-    "      data-rows (->> tonnage-generated-per-council-citizen-based\n",
+    "      data-rows (->> stats-on-tonnage-generated-per-council-citizen\n",
     "                     (map vals))]\n",
     "    (with-open [writer (io/writer file)]\n",
     "      (csv/write-csv writer (cons header-row data-rows)))\n",
@@ -320,25 +356,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use Vega to generate 3 choropleths which help visualise the\n",
+    "* 2018 tonnage\n",
+    "* 2011-2018 average tonnage\n",
+    "* 2011-2018 trend in tonnage\n",
+    "\n",
+    "...of waste generated per council citizen against the council-oriented geography of Scotland."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "to-format: :html\n",
-      "[I 16:26:52.184 Clojupyter] oz.core:425 -- input: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/9dfcce6d-8644-4a0d-8002-e5f177ea02bb7040976134973307118.vl.json\n",
-      "[I 16:26:52.191 Clojupyter] oz.core:426 -- output: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/607c77a6-dbcf-473b-a4d2-2cd5aae261e22047451304767038196.png\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
        "\n",
        "  <div>\n",
-       "    <div id='uuid-4ae6c36a-6e40-453a-a6a7-cf557ff10b6a'></div>\n",
+       "    <div id='uuid-7d793353-02f5-4c10-b627-e84e94efda55'></div>\n",
        "    <script>\n",
        "    requirejs.config({\n",
        "      baseUrl: 'https://cdn.jsdelivr.net/npm/',\n",
@@ -350,8 +389,8 @@
        "      }\n",
        "    });\n",
        "    require(['vega-embed'], function(vegaEmbed) {\n",
-       "      let spec = {\"$schema\":\"https:\\/\\/vega.github.io\\/schema\\/vega-lite\\/v4.json\",\"repeat\":{\"row\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 change in tonnage\"]},\"resolve\":{\"scale\":{\"color\":\"independent\"}},\"spec\":{\"width\":\"500\",\"height\":\"500\",\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/topo_lad.json\",\"format\":{\"type\":\"topojson\",\"feature\":\"lad\"}},\"transform\":[{\"lookup\":\"properties['LAD13NM']\",\"from\":{\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/tonnage-generated-per-council-citizen-based.csv\"},\"key\":\"council\",\"fields\":[\"recent\",\"average\",\"trend\"]},\"as\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 change in tonnage\"]}],\"projection\":{\"type\":\"albers\",\"rotate\":[0,0,0]},\"mark\":{\"type\":\"geoshape\",\"strokeWidth\":0.2,\"stroke\":\"black\"},\"encoding\":{\"tooltip\":[{\"title\":\"council\",\"field\":\"properties['LAD13NM']\",\"type\":\"nominal\"},{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}],\"color\":{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}}}};\n",
-       "      vegaEmbed('#uuid-4ae6c36a-6e40-453a-a6a7-cf557ff10b6a', spec, {defaultStyle:true}).catch(console.warn);\n",
+       "      let spec = {\"$schema\":\"https:\\/\\/vega.github.io\\/schema\\/vega-lite\\/v4.json\",\"repeat\":{\"row\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 trend in tonnage\"]},\"resolve\":{\"scale\":{\"color\":\"independent\"}},\"spec\":{\"width\":\"400\",\"height\":\"400\",\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/topo_lad.json\",\"format\":{\"type\":\"topojson\",\"feature\":\"lad\"}},\"transform\":[{\"lookup\":\"properties['LAD13NM']\",\"from\":{\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/stats-on-tonnage-generated-per-council-citizen.csv\"},\"key\":\"council\",\"fields\":[\"recent\",\"average\",\"trend\"]},\"as\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 trend in tonnage\"]}],\"projection\":{\"type\":\"albers\",\"rotate\":[0,0,0]},\"mark\":{\"type\":\"geoshape\",\"strokeWidth\":0.2,\"stroke\":\"black\"},\"encoding\":{\"tooltip\":[{\"title\":\"council\",\"field\":\"properties['LAD13NM']\",\"type\":\"nominal\"},{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}],\"color\":{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}}}};\n",
+       "      vegaEmbed('#uuid-7d793353-02f5-4c10-b627-e84e94efda55', spec, {defaultStyle:true}).catch(console.warn);\n",
        "      }, function(err) {\n",
        "      console.log('Failed to load');\n",
        "    });\n",
@@ -360,20 +399,20 @@
        "    "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "; Choropleth of the waste generated per council citizen in 2018\n",
+    "; Use Vega to generate 3 choropleths\n",
     "\n",
     "(def repo-dir \"https://raw.githubusercontent.com/data-commons-scotland/dcs-shorts/topojson-experiment/choropleth-generation/\")\n",
     "\n",
     "(def chart-spec {:$schema \"https://vega.github.io/schema/vega-lite/v4.json\"\n",
     "                 :repeat {:row [\"2018 tonnage\" \n",
     "                                \"2011-2018 average tonnage\"\n",
-    "                                \"2011-2018 change in tonnage\"]}\n",
+    "                                \"2011-2018 trend in tonnage\"]}\n",
     "                 :resolve {:scale {:color \"independent\"}}\n",
     "                 :spec {\n",
     "                     :width \"500\"\n",
@@ -388,7 +427,7 @@
     "                                         :fields [\"recent\" \"average\" \"trend\"]}\n",
     "                                  :as [\"2018 tonnage\" \n",
     "                                       \"2011-2018 average tonnage\"\n",
-    "                                       \"2011-2018 change in tonnage\"]}]\n",
+    "                                       \"2011-2018 trend in tonnage\"]}]\n",
     "                     :projection {:type \"albers\" :rotate [0, 0, 0]}\n",
     "                     :mark {:type \"geoshape\" :strokeWidth 0.2 :stroke \"black\"}\n",
     "                     :encoding {:tooltip [{:title \"council\" :field \"properties['LAD13NM']\" :type \"nominal\"}\n",
@@ -399,7 +438,7 @@
     "\n",
     "; (print (json/write-str chart-spec))\n",
     "\n",
-    "; (ozcore/export! [:div [:vega-lite chart-spec]] \"choropleth.html\" {:from-format :hiccup :to-format :html})\n",
+    "; (ozcore/export! [:div [:vega-lite chart-spec]] \"chart.html\" {:from-format :hiccup :to-format :html})\n",
     "\n",
     "(oz/view! chart-spec)"
    ]
