--- a/README.adoc
+++ b/README.adoc
@@ -8,3 +8,4 @@ Short investigations, experiments, etc.
 1. link:stats-gov-scot-waste-data-investigation/[Having a look at the data about waste on statistics.gov.scot]
 1. link:eu-waste-data-investigation/[A look at stats oriented websites in the EU that provide data about waste]
 1. link:stirling-cube-experiment/[Stirling Council’s waste-management dataset as linked open data]
+1. link:choropleth-experiment/[The geography of household waste generation]
