--- a/choropleth-generation/cube-to-chart.ipynb
+++ b/choropleth-generation/cube-to-chart.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Geography and household waste generation\n",
+    "# The _geography_ of household waste generation\n",
     "\n",
-    "This experiment generates choropleths which help visualise the variations in the amounts of household-generated waste across geographic areas in Scotland."
+    "This experiment generates choropleths to help visualise the variations in the amounts of household-generated waste across geographic areas in Scotland."
    ]
   },
   {
@@ -98,12 +98,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use a SPARQL query against statistics.gov.scot's data cubes, to find the waste tonnage genearated per council citizen per year."
+    "Use a SPARQL query against statistics.gov.scot's data cubes to find the waste tonnage generated per council citizen per year."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "nil"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
     "* `average` - 2011-2018's average tonnage of waste generated per council citizen.\n",
     "<br>(Calculated as the _mean_.)\n",
     "* `trend` - 2011-2018's trend in tonnage of waste generated per council citizen.\n",
-    "<br>(Calculated as the gradient of a linear approximation to the tonage over the years.)"
+    "<br>(Calculated as the gradient of a linear approximation to the tonnage over the years.)"
    ]
   },
   {
@@ -369,15 +369,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to-format: :html\n",
+      "[I 10:30:45.242 Clojupyter] oz.core:425 -- input: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/b6696521-3093-44ea-9f25-793a802782a02790087172975336132.vl.json\n",
+      "[I 10:30:45.467 Clojupyter] oz.core:426 -- output: /var/folders/wl/ff7688p93t1b3tm2l0bv93yc0000gn/T/1a4d5fd0-fa02-4f52-bb3d-36e387fe39921389510715596397414.png\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "\n",
        "  <div>\n",
-       "    <div id='uuid-7d793353-02f5-4c10-b627-e84e94efda55'></div>\n",
+       "    <div id='uuid-a95fc1ef-23ca-4066-bcb4-a522be4c4c15'></div>\n",
        "    <script>\n",
        "    requirejs.config({\n",
        "      baseUrl: 'https://cdn.jsdelivr.net/npm/',\n",
@@ -389,8 +398,8 @@
        "      }\n",
        "    });\n",
        "    require(['vega-embed'], function(vegaEmbed) {\n",
-       "      let spec = {\"$schema\":\"https:\\/\\/vega.github.io\\/schema\\/vega-lite\\/v4.json\",\"repeat\":{\"row\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 trend in tonnage\"]},\"resolve\":{\"scale\":{\"color\":\"independent\"}},\"spec\":{\"width\":\"400\",\"height\":\"400\",\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/topo_lad.json\",\"format\":{\"type\":\"topojson\",\"feature\":\"lad\"}},\"transform\":[{\"lookup\":\"properties['LAD13NM']\",\"from\":{\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/stats-on-tonnage-generated-per-council-citizen.csv\"},\"key\":\"council\",\"fields\":[\"recent\",\"average\",\"trend\"]},\"as\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 trend in tonnage\"]}],\"projection\":{\"type\":\"albers\",\"rotate\":[0,0,0]},\"mark\":{\"type\":\"geoshape\",\"strokeWidth\":0.2,\"stroke\":\"black\"},\"encoding\":{\"tooltip\":[{\"title\":\"council\",\"field\":\"properties['LAD13NM']\",\"type\":\"nominal\"},{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}],\"color\":{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}}}};\n",
-       "      vegaEmbed('#uuid-7d793353-02f5-4c10-b627-e84e94efda55', spec, {defaultStyle:true}).catch(console.warn);\n",
+       "      let spec = {\"$schema\":\"https:\\/\\/vega.github.io\\/schema\\/vega-lite\\/v4.json\",\"repeat\":{\"row\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 trend in tonnage\"]},\"resolve\":{\"scale\":{\"color\":\"independent\"}},\"spec\":{\"width\":\"500\",\"height\":\"500\",\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/topo_lad.json\",\"format\":{\"type\":\"topojson\",\"feature\":\"lad\"}},\"transform\":[{\"lookup\":\"properties['LAD13NM']\",\"from\":{\"data\":{\"url\":\"https:\\/\\/raw.githubusercontent.com\\/data-commons-scotland\\/dcs-shorts\\/topojson-experiment\\/choropleth-generation\\/stats-on-tonnage-generated-per-council-citizen.csv\"},\"key\":\"council\",\"fields\":[\"recent\",\"average\",\"trend\"]},\"as\":[\"2018 tonnage\",\"2011-2018 average tonnage\",\"2011-2018 trend in tonnage\"]}],\"projection\":{\"type\":\"albers\",\"rotate\":[0,0,0]},\"mark\":{\"type\":\"geoshape\",\"strokeWidth\":0.2,\"stroke\":\"black\"},\"encoding\":{\"tooltip\":[{\"title\":\"council\",\"field\":\"properties['LAD13NM']\",\"type\":\"nominal\"},{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}],\"color\":{\"field\":{\"repeat\":\"row\"},\"type\":\"quantitative\"}}}};\n",
+       "      vegaEmbed('#uuid-a95fc1ef-23ca-4066-bcb4-a522be4c4c15', spec, {defaultStyle:true}).catch(console.warn);\n",
        "      }, function(err) {\n",
        "      console.log('Failed to load');\n",
        "    });\n",
@@ -399,7 +408,7 @@
        "    "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +447,7 @@
     "\n",
     "; (print (json/write-str chart-spec))\n",
     "\n",
-    "; (ozcore/export! [:div [:vega-lite chart-spec]] \"chart.html\" {:from-format :hiccup :to-format :html})\n",
+    "; (ozcore/export! [:div [:vega-lite chart-spec]] \"choropleths.html\" {:from-format :hiccup :to-format :html})\n",
     "\n",
     "(oz/view! chart-spec)"
    ]
