fix formatting for Github

--- a/choropleth-generation/README.adoc
+++ b/choropleth-generation/README.adoc
@@ -1,14 +1,12 @@
 = The geography of household waste generation
 
-.Working on his human geography homework:
-[quote, Rory, fictional scenario]
-Which areas in Scotland are reducing their household waste?"
+Working on his human geography homework, Rory asks:
 
+> Which areas in Scotland are reducing their household waste?"
 
-.After looking at the chart which visualises waste amounts against geographic areas:
-[quote, Niamh, fictional scenario]
-I wonder why urban populations _seem_ to generated less waste than rural ones?
+Looking at the chart which visualises waste amounts against geographic areas, Niamh thinks:
 
+> I wonder why urban populations _seem_ to generated less waste than rural ones?
 
 In a step towards supporting the above scenarios,
 this experiment generates https://en.wikipedia.org/wiki/Choropleth_map[choropleth]s to help visualise
